@@ -1,95 +1,0 @@
-                                Release Summary
-
-                              asterisk-12.8.0-rc2
-
-                                Date: 2014-12-10
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release has been made to address one or more security vulnerabilities
-   that have been identified. A security advisory document has been published
-   for each vulnerability that includes additional information. Users of
-   versions of Asterisk that are affected are strongly encouraged to review
-   the advisories and determine what action they should take to protect their
-   systems from these issues.
-
-   Security Advisories: AST-2014-019
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-12.8.0-rc1.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   3 bebuild                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 429310   | bebuild | Create 12.8.0-rc2             |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 429313   | bebuild | Remove old summaries; update  |                   |
-   |          |         | .version                      |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 429316   | bebuild | Merge r429272 for             |                   |
-   |          |         | AST-2014-019                  |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                            |    2
- ChangeLog                           |   22 +
- asterisk-12.8.0-rc1-summary.html    |  503 ----------------------------
- asterisk-12.8.0-rc1-summary.txt     |  641 ------------------------------------
- channels/chan_sip.c                 |    6
- res/res_http_websocket.c            |   27 -
- res/res_pjsip_transport_websocket.c |    3
- 7 files changed, 46 insertions(+), 1158 deletions(-)
-
-     ----------------------------------------------------------------------
